--- a/index.html
+++ b/index.html
@@ -1,119 +1,143 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>登陆页面</title>
-        <!-- author xjt -->
+    <title>doublelz的个人简介</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #f0f4f8; /* 背景色 */
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            overflow: auto; /* 允许滚动 */
+        }
+        .container {
+            background: white;
+            border-radius: 20px;
+            box-shadow: 0 10px 50px rgba(0, 0, 0, 0.3);
+            padding: 40px;
+            text-align: center;
+            max-width: 800px; /* 增大容器的最大宽度 */
+            width: 90%; /* 自适应宽度为90% */
+            margin: 20px; /* 使内容与屏幕边缘有间距 */
+            animation: fadeIn 1s; /* 渐显动画 */
+        }
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+        h1 {
+            font-size: 2.5em;
+            color: #333;
+            margin-bottom: 10px;
+        }
+        h2 {
+            font-size: 1.8em;
+            margin: 10px 0;
+            color: #4CAF50;
+        }
+        p {
+            font-size: 1.2em;
+            color: #666;
+            line-height: 1.5;
+        }
+        .skills, .projects, .hobbies {
+            margin-top: 20px;
+            text-align: left; /* 左对齐 */
+        }
+        .skills ul, .projects ul, .hobbies ul {
+            list-style-type: none; /* 去除默认列表样式 */
+            padding: 0; /* 去除内边距 */
+        }
+        .skills li, .projects li, .hobbies li {
+            margin: 5px 0; /* 项目之间的间距 */
+            font-weight: bold; /* 字体加粗 */
+        }
+        .contact {
+            margin-top: 20px;
+            font-size: 1em;
+            color: #007BFF;
+        }
+        .contact a {
+            text-decoration: none;
+            color: #007BFF;
+            font-weight: bold;
+            transition: color 0.3s ease, transform 0.3s ease; /* 过渡效果 */
+        }
+        .contact a:hover {
+            text-decoration: underline;
+            color: #0056b3; /* 悬停时颜色变化 */
+            transform: scale(1.05); /* 悬停时放大效果 */
+        }
+        .profile-pic {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            margin: 20px 0;
+            border: 5px solid #4CAF50; /* 绿色边框 */
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2); /* 头像阴影 */
+            animation: zoomIn 1s; /* 缩放动画 */
+        }
+        @keyframes zoomIn {
+            from { transform: scale(0); }
+            to { transform: scale(1); }
+        }
+    </style>
 </head>
 <body>
-    <div class="login">
-        <h2>登陆\注册</h2>
-        <div class="login_form">
-            <span>账号：</span>
-            <input type="text" placeholder="请输入账号">
-            <br>
-            <span>密码：</span>
-            <input type="password" placeholder="请输入密码">
+    
+    <div class="container">
+        <img class="profile-pic" src="https://img.picui.cn/free/2024/11/01/6724c9606130a.jpg" alt="Profile Picture" title="个人头像" />
+        <h1>欢迎来到我的个人简介</h1>
+        <h2>姓名：DoubleLZ</h2>
+        <p>我是一名热爱编程和技术的开发者，专注于嵌入式开发和单片机开发。我在软件开发领域积累了丰富的经验，并对新技术充满热情。</p>
+
+        <h2>技能</h2>
+        <div class="skills">
+            <ul>
+                <li>单片机开发</li>
+                <li>嵌入式开发</li>
+                <li>C/C++ 编程</li>
+                <li>Python 编程</li>
+                <li>系统设计和开发</li>
+                <li>软硬件结合</li>
+            </ul>
         </div>
-        <div class="btn">
-            <button class="login_btn" onclick="login()">登 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;录</button>
+
+        <h2>项目经验</h2>
+        <div class="projects">
+            <ul>
+                <li>项目一：双车跟随控制系统</li>
+                <li>项目二：基于单片机的温湿度监测</li>
+                <li>项目三：嵌入式实时操作系统开发</li>
+                <li>项目四：人脸识别门禁系统</li>
+                <li>项目五：送药小车系统</li>
+            </ul>
+        </div>
+
+        <h2>个人爱好</h2>
+        <div class="hobbies">
+            <ul>
+                <li>科技博客和技术文章写作</li>
+                <li>开源项目贡献</li>
+                <li>参加编程比赛</li>
+                <li>阅读和学习新技术</li>
+            </ul>
+        </div>
+
+        <p>如果您对我的工作感兴趣，请随时与我联系！</p>
+        <div class="contact">
+            <p>电子邮件：<a href="mailto:2794266399@qq.com">2794266399@qq.com</a></p>
+            <p>电话：<a href="tel:13720132124">13720132124</a></p>
+            <p>B站 UID：<a href="https://space.bilibili.com/470992866">470992866</a></p>
         </div>
     </div>
+
 </body>
-<script>
-    function login(){
-        console.log('登录按钮点击了');
-    }
-</script>
-<style>
-    body{
-        padding: 0;
-        margin: 0;
-        height: 100vh;
-        display: flex;
-        justify-content: center;
-        background-image: linear-gradient(#a18cd1 0%, #fbc2eb 100%);
-        background-size: cover;
-        flex: 1;
-        align-items: center;
-    }
-    .login{
-        text-align: center;
-        margin: 0 auto;
-        width: 600px;
-        height: 520px;
-        background-color: rgba(87, 86, 86, 0.2);
-        border-radius: 25px;
-        box-shadow: 5px 2px 35px -7px #ff9a9e;
-    }
-    .login h2{
-        margin-top: 40px;
-        color: aliceblue;
-        font-weight: 100;
-    }
-    .login_form{
-        padding: 20px;
-    }
-    .login_form span{
-        color: rgb(131, 220, 255);
-        font-size: 18px;
-        font-weight: 100;
-    }
-    .login_form input{
-        background-color: transparent;
-        width: 320px;
-        padding: 2px;
-        text-indent: 2px;
-        color: white;
-        font-size: 20px;
-        height: 45px;
-        margin: 30px 30px 30px 5px;
-        outline: none;
-        border: 0;
-        border-bottom: 1px solid rgb(131, 220, 255);
-    }
-    input::placeholder{
-        color: #fbc2eb;
-        font-weight: 100;
-        font-size: 18px;
-        font-style: italic;
-    }
-    .login_btn{
-        background-color: rgba(255, 255, 255, 0.582);
-        border: 1px solid rgb(190, 225, 255);
-        padding: 10px;
-        width: 240px;
-        height: 60px;
-        border-radius: 30px;
-        font-size: 30px;
-        color: rgb(100, 183, 255);
-        font-weight: 100;       
-        margin-top: 15px;
-    }
-    .login_btn:hover{
-        box-shadow: 2px 2px 15px 2px rgb(190, 225, 255);
-        background-color: transparent;
-        color: white;
-        /* 选择动画 */
-        animation: login_mation 0.5s;
-    }
-
-    /* 定义动画 */
-    @keyframes login_mation
-    {
-        from {
-            background-color: rgba(255, 255, 255, 0.582);
-            box-shadow: 0px 0px 15px 2px rgb(190, 225, 255);
-        }
-        to {
-            background-color: transparent;
-            color: white;
-            box-shadow: 2px 2px 15px 2px rgb(190, 225, 255);
-        }
-    }
-</style>
-
 </html>
-
