--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            min-height: 100vh;
             overflow: auto; /* 允许滚动 */
         }
         .container {
             background: white;
             border-radius: 20px;
             box-shadow: 0 10px 50px rgba(0, 0, 0, 0.3);
-            padding: 40px;
+            padding: 20px; /* 减少内边距以兼容小屏幕 */
             text-align: center;
             max-width: 800px; /* 增大容器的最大宽度 */
             width: 90%; /* 自适应宽度为90% */
@@ -38,12 +38,16 @@
             margin-bottom: 10px;
         }
         h2 {
-            font-size: 1.8em;
+            font-size: 2em; /* 增加中间标题的字体 */
             margin: 10px 0;
             color: #4CAF50;
         }
+        h3 {
+            font-size: 1.5em; /* 调整小标题的字体大小 */
+            margin: 10px 0;
+        }
         p {
-            font-size: 1.2em;
+            font-size: 1em; /* 适应小尺寸字体 */
             color: #666;
             line-height: 1.5;
         }
@@ -76,8 +80,8 @@
             transform: scale(1.05); /* 悬停时放大效果 */
         }
         .profile-pic {
-            width: 150px;
-            height: 150px;
+            width: 120px; /* 适应小屏幕的头像宽度 */
+            height: 120px; /* 适应小屏幕的头像高度 */
             border-radius: 50%;
             margin: 20px 0;
             border: 5px solid #4CAF50; /* 绿色边框 */
@@ -88,6 +92,22 @@
             from { transform: scale(0); }
             to { transform: scale(1); }
         }
+
+        /* 媒体查询 */
+        @media (max-width: 600px) {
+            h1 {
+                font-size: 2em; /* 减小主标题字体 */
+            }
+            h2 {
+                font-size: 1.5em; /* 减小中间标题字体 */
+            }
+            h3 {
+                font-size: 1.2em; /* 减小小标题字体 */
+            }
+            p, .skills li, .projects li, .hobbies li {
+                font-size: 0.9em; /* 更适配小屏幕的字体大小 */
+            }
+        }
     </style>
 </head>
 <body>
@@ -95,10 +115,10 @@
     <div class="container">
         <img class="profile-pic" src="https://img.picui.cn/free/2024/11/01/6724c9606130a.jpg" alt="Profile Picture" title="个人头像" />
         <h1>欢迎来到我的个人简介</h1>
-        <h2>姓名：DoubleLZ</h2>
+        <h2>姓名：doublelz</h2>
         <p>我是一名热爱编程和技术的开发者，专注于嵌入式开发和单片机开发。我在软件开发领域积累了丰富的经验，并对新技术充满热情。</p>
 
-        <h2>技能</h2>
+        <h3>技能</h3>
         <div class="skills">
             <ul>
                 <li>单片机开发</li>
@@ -110,18 +130,17 @@
             </ul>
         </div>
 
-        <h2>项目经验</h2>
+        <h3>项目经验</h3>
         <div class="projects">
             <ul>
-                <li>项目一：双车跟随控制系统</li>
+                <li>项目一：智能家居控制系统</li>
                 <li>项目二：基于单片机的温湿度监测</li>
                 <li>项目三：嵌入式实时操作系统开发</li>
                 <li>项目四：人脸识别门禁系统</li>
-                <li>项目五：送药小车系统</li>
             </ul>
         </div>
 
-        <h2>个人爱好</h2>
+        <h3>个人爱好</h3>
         <div class="hobbies">
             <ul>
                 <li>科技博客和技术文章写作</li>
